--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -14,18 +14,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:12:32.253664Z",
-     "start_time": "2025-03-06T10:12:31.775195Z"
+     "end_time": "2025-03-08T12:01:23.437642Z",
+     "start_time": "2025-03-08T12:01:23.429430Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "from math import log"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -36,8 +37,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:12:32.269563Z",
-     "start_time": "2025-03-06T10:12:32.265184Z"
+     "end_time": "2025-03-08T12:01:23.453410Z",
+     "start_time": "2025-03-08T12:01:23.443675Z"
     }
    },
    "cell_type": "code",
@@ -59,13 +60,13 @@
    ],
    "id": "d6fd7d037011f5e6",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:12:32.597657Z",
-     "start_time": "2025-03-06T10:12:32.283052Z"
+     "end_time": "2025-03-08T12:01:23.484861Z",
+     "start_time": "2025-03-08T12:01:23.470368Z"
     }
    },
    "cell_type": "code",
@@ -81,12 +82,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24, 86, 86, 86, 86, 9, 82, 37, 91, 24]\n",
-      "[9, 24, 24, 37, 82, 86, 86, 86, 86, 91]  Comprasions:  21  Swaps:  21\n"
+      "[14, 86, 68, 26, 31, 83, 85, 74, 46, 13]\n",
+      "[13, 14, 26, 31, 46, 68, 74, 83, 85, 86]  Comprasions:  24  Swaps:  24\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -97,90 +98,54 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:12:33.209357Z",
-     "start_time": "2025-03-06T10:12:33.195837Z"
+     "end_time": "2025-03-08T12:01:23.531794Z",
+     "start_time": "2025-03-08T12:01:23.517284Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def get_gap_sequence(n, sequence_type):\n",
-    "        gaps = []\n",
-    "        if sequence_type == \"knuth\":\n",
-    "            h = 1\n",
-    "            while h < n:\n",
-    "                gaps.append(h)\n",
-    "                h = 3 * h + 1\n",
-    "        elif sequence_type == \"hibbard\":\n",
-    "            k = 1\n",
-    "            while (h := 2**k - 1) < n:\n",
-    "                gaps.append(h)\n",
-    "                k += 1\n",
-    "        elif sequence_type == \"sedgwick\":\n",
-    "            k = 0\n",
-    "            while True:\n",
-    "                if k % 2 == 0:\n",
-    "                    h = 9 * (2**k - 2**(k//2)) + 1\n",
-    "                else:\n",
-    "                    h = 8 * 2**k - 6 * 2**((k+1)//2) + 1\n",
-    "                if h >= n:\n",
-    "                    break\n",
-    "                gaps.append(h)\n",
-    "                k += 1\n",
-    "        return sorted(gaps, reverse=True)"
-   ],
-   "id": "1ba55303b297e720",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-06T10:12:33.271923Z",
-     "start_time": "2025-03-06T10:12:33.252921Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def shell_sort(arr, sequence_type):\n",
-    "    n = len(arr)\n",
+    "def shell_sort(array):\n",
+    "    n = len(array)\n",
     "    comparisons = 0\n",
     "    swaps = 0\n",
     "\n",
-    "    gaps = get_gap_sequence(n, sequence_type)\n",
+    "    gap = 1\n",
+    "    while gap < n // 3:\n",
+    "        gap = 3 * gap + 1\n",
     "\n",
-    "    for gap in gaps:\n",
+    "    while gap > 0:\n",
     "        for i in range(gap, n):\n",
-    "            temp = arr[i]\n",
+    "            temp = array[i]\n",
     "            j = i\n",
     "            while j >= gap:\n",
     "                comparisons += 1\n",
-    "                if arr[j - gap] > temp:\n",
-    "                    arr[j] = arr[j - gap]\n",
-    "                    swaps += 1\n",
+    "                if array[j - gap] > temp:\n",
+    "                    array[j] = array[j - gap]\n",
     "                    j -= gap\n",
+    "                    swaps += 1\n",
     "                else:\n",
     "                    break\n",
-    "            arr[j] = temp\n",
+    "            array[j] = temp\n",
+    "        gap //= 3\n",
     "\n",
-    "    return arr, comparisons, swaps\n"
+    "    return array, comparisons, swaps"
    ],
    "id": "118809420191adb",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:13:54.590005Z",
-     "start_time": "2025-03-06T10:13:48.221813Z"
+     "end_time": "2025-03-08T12:01:23.547184Z",
+     "start_time": "2025-03-08T12:01:23.538183Z"
     }
    },
    "cell_type": "code",
    "source": [
     "array_2 = np.random.randint(1, 100, size=10).tolist()\n",
     "print(array_2)\n",
-    "sequence_type = input(\"Choose formula: knuth, hibbard, sedgwick\")\n",
-    "sorted_array_shl, comparisons_shl, swaps_shl = shell_sort(array_2, sequence_type)\n",
+    "sorted_array_shl, comparisons_shl, swaps_shl = shell_sort(array_2)\n",
     "print(sorted_array_shl, \" Comprasions: \", comparisons_shl, \" Swaps: \", swaps_shl)"
    ],
    "id": "8b5d60f29426600a",
@@ -189,12 +154,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 61, 13, 59, 2, 36, 60, 58, 20, 77]\n",
-      "[2, 8, 13, 20, 36, 58, 59, 60, 61, 77]  Comprasions:  27  Swaps:  15\n"
+      "[44, 76, 94, 84, 79, 97, 46, 23, 4, 66]\n",
+      "[4, 23, 44, 46, 66, 76, 79, 84, 94, 97]  Comprasions:  25  Swaps:  14\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -205,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:39:03.460411Z",
-     "start_time": "2025-03-06T10:39:03.446678Z"
+     "end_time": "2025-03-08T12:01:23.577850Z",
+     "start_time": "2025-03-08T12:01:23.563183Z"
     }
    },
    "cell_type": "code",
@@ -220,25 +185,27 @@
     "    start_time_ins = time.time()\n",
     "    sorted_array_ins, comparisons_ins, swaps_ins = insertion_sort(array_ins)\n",
     "    end_time_ins = time.time()\n",
+    "    print(\"Theoretical Compasions: \", (2 + size) * (size - 1) // 4, \"Theoretical Swaps: \", (size - 1) * size // 4)\n",
     "    print(\"Comparisons:\", comparisons_ins, \"Swaps:\", swaps_ins)\n",
     "    print(f\"Time: {end_time_ins - start_time_ins:.6f} seconds\")\n",
     "\n",
     "    print(\"Shell sort method:\")\n",
     "    start_time_shl = time.time()\n",
-    "    sorted_array_shl, comparisons_shl, swaps_shl = shell_sort(array_shl, \"knuth\")\n",
+    "    sorted_array_shl, comparisons_shl, swaps_shl = shell_sort(array_shl)\n",
     "    end_time_shl = time.time()\n",
+    "    print(\"Theoretical Compasions: \", size * (log(size) ** 2) // 2, \"Theoretical Swaps: \", size * (log(size) ** 2) // 4)\n",
     "    print(\"Comparisons:\", comparisons_shl, \"Swaps:\", swaps_shl)\n",
     "    print(f\"Time: {end_time_shl - start_time_shl:.6f} seconds\")"
    ],
    "id": "62180939b16a0248",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:39:06.125121Z",
-     "start_time": "2025-03-06T10:39:06.117748Z"
+     "end_time": "2025-03-08T12:01:23.609062Z",
+     "start_time": "2025-03-08T12:01:23.596115Z"
     }
    },
    "cell_type": "code",
@@ -252,21 +219,23 @@
       "\n",
       "Size of massive: 100\n",
       "Insertion sort:\n",
-      "Comparisons: 2661 Swaps: 2661\n",
-      "Time: 0.000658 seconds\n",
+      "Theoretical Compasions:  2524 Theoretical Swaps:  2475\n",
+      "Comparisons: 2386 Swaps: 2386\n",
+      "Time: 0.000000 seconds\n",
       "Shell sort method:\n",
-      "Comparisons: 729 Swaps: 432\n",
+      "Theoretical Compasions:  1060.0 Theoretical Swaps:  530.0\n",
+      "Comparisons: 717 Swaps: 416\n",
       "Time: 0.000000 seconds\n"
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:39:09.872704Z",
-     "start_time": "2025-03-06T10:39:09.830248Z"
+     "end_time": "2025-03-08T12:01:23.686307Z",
+     "start_time": "2025-03-08T12:01:23.638987Z"
     }
    },
    "cell_type": "code",
@@ -280,21 +249,23 @@
       "\n",
       "Size of massive: 1000\n",
       "Insertion sort:\n",
-      "Comparisons: 249300 Swaps: 249300\n",
-      "Time: 0.033982 seconds\n",
+      "Theoretical Compasions:  250249 Theoretical Swaps:  249750\n",
+      "Comparisons: 249842 Swaps: 249842\n",
+      "Time: 0.032171 seconds\n",
       "Shell sort method:\n",
-      "Comparisons: 14101 Swaps: 9060\n",
-      "Time: 0.002012 seconds\n"
+      "Theoretical Compasions:  23858.0 Theoretical Swaps:  11929.0\n",
+      "Comparisons: 14306 Swaps: 9281\n",
+      "Time: 0.001000 seconds\n"
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T10:39:15.518170Z",
-     "start_time": "2025-03-06T10:39:12.634493Z"
+     "end_time": "2025-03-08T12:01:26.754898Z",
+     "start_time": "2025-03-08T12:01:23.704257Z"
     }
    },
    "cell_type": "code",
@@ -308,15 +279,17 @@
       "\n",
       "Size of massive: 10000\n",
       "Insertion sort:\n",
-      "Comparisons: 24971092 Swaps: 24971092\n",
-      "Time: 2.841676 seconds\n",
+      "Theoretical Compasions:  25002499 Theoretical Swaps:  24997500\n",
+      "Comparisons: 25111152 Swaps: 25111152\n",
+      "Time: 3.004724 seconds\n",
       "Shell sort method:\n",
-      "Comparisons: 233815 Swaps: 162906\n",
-      "Time: 0.029992 seconds\n"
+      "Theoretical Compasions:  424151.0 Theoretical Swaps:  212075.0\n",
+      "Comparisons: 232151 Swaps: 161323\n",
+      "Time: 0.030074 seconds\n"
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 35
   }
  ],
  "metadata": {
